fixed more small typos/mistakes

--- a/Chapter_IntroFutures.qmd
+++ b/Chapter_IntroFutures.qmd
@@ -29,7 +29,7 @@ Like options, most traders unwind positions by making offsetting trades rather t
 The delivery terms on futures contracts are standardized and specified by the exchange.  The exchange designates a delivery location and a delivery date.  The exchange also specifies the quantity and quality of the underlying asset that must be delivered.  For some contracts, different qualities can be delivered, and there are specifications for price adjustments based on the quality.  The specifications of the [corn futures contract on the CME](https://www.cmegroup.com/markets/agriculture/grains/corn.contractSpecs.html) give a good sense for how this works.
 
 Some futures contracts are **cash settled**.  For such contracts, there are no provisions for physical delivery.  Instead, contracts that are held to expiration are settled based on a formula tied to the underlying asset at the time of expiration.  For example, the [e-mini S&P 500 futures contract at the CME](https://www.cmegroup.com/markets/equities/sp/e-mini-sandp500.contractSpecs.html) is 
-cash settled. The contract is settled based on the value of the S&P 500 index at the time of expiration.  This eliminates the need to deliver or receive delivery of the 500 stocks that make up the index.  The "quantity" specification for cash settled contracts is a **multiplier** that determines the dollar value of tge contract.  The e-mini S&P 500 contract has a multiplier of 50 dollars per unit of the index.^[The term "e-mini" is an historical artifact.  When the S&P 500 futures contract was first introduced, it had a multiplier of $500.  When the index rose, so that a contract represented a higher dollar value of stocks, this was reduced to $250.  The e-mini was simultaneously traded with a multiplier of $50.  Currently, the e-mini contract has the largest multiplier of any S&P 500 contract at the CME (there is another contract with a multiplier of $5, called the "micro e-mini").]   If someone buys a contract at a futures price of 6000 and holds to expiration and the index is at 6500 on the expiration date, then that trader makes 50 $\,\times\,$ (6500 - 6000) $\,=\,$ 250,000 dollars profit on the trade.
+cash settled. The contract is settled based on the value of the S&P 500 index at the time of expiration.  This eliminates the need to deliver or receive delivery of the 500 stocks that make up the index.  The "quantity" specification for cash settled contracts is a **multiplier** that determines the dollar value of the contract.  The e-mini S&P 500 contract has a multiplier of 50 dollars per unit of the index.^[The term "e-mini" is an historical artifact.  When the S&P 500 futures contract was first introduced, it had a multiplier of $500.  When the index rose, so that a contract represented a higher dollar value of stocks, this was reduced to $250.  The e-mini was simultaneously traded with a multiplier of $50.  Currently, the e-mini contract has the largest multiplier of any S&P 500 contract at the CME (there is another contract with a multiplier of $5, called the "micro e-mini").]   If someone buys a contract at a futures price of 6000 and holds to expiration and the index is at 6500 on the expiration date, then that trader makes 50 $\,\times\,$ (6500 - 6000) $\,=\,$ 250,000 dollars profit on the trade.
 
 Futures contracts in the modern sense began trading in the United States in 1851, but cash-settled contracts did not begin trading until 1981.^[Millo, Y., 2007, "Making Things Deliverable: The Origins of Index-Based Derivatives", *Sociological Review*, vol. 55.]  Part of the complication with introducing cash-settled contracts is that they blur the line between trading and gambling.  The buyer and seller of an S&P 500 futures contract are clearly betting on how the S&P 500 index will perform.  The buyer wins if the index finishes above the futures price, and the seller wins otherwise.  There are other cash-settled contracts that do not even involve an underlying asset.  For example, there are weather contracts that are cash settled based on the number of heating degree days in a particular time frame.  The distinction that has been drawn between legal trading of cash-settled futures contracts and possibly illegal gambling is that futures contracts must satisfy legitimate risk-management needs for some market participants.  For example, an equity fund manager who wants to reduce her stock market exposure at a minimal trading cost can sell S&P 500 futures contracts to hedge the fund's stock portfolio.  
 
@@ -223,7 +223,7 @@ fig.show()
 
 Spot-futures parity for commodities is more complex than for financial assets, because of storage costs and convenience yields.  Because the convenience yield by definition is never negative, the spot-futures parity formula gives us $F \leq  \mathrm{e}^{rT}S$, where, for commodities, $c$ is the interest rate plus the storage cost rate.  The difference between the futures price $F$ and $\mathrm{e}^{rT}S$ depends on the convenience yield $y$ and the contract maturity $T$.  We generally have no direct measure of the convenience yield other than this difference, so the spot-futures parity formula for commodities, while true and a useful concept, may have little predictive power.  An additional complication is that storage costs are very high for some commodities, such as electricity and natural gas, which can make the upper bound $F \leq \mathrm{e}^{rT}S$ nearly meaningless.
 
-As a result of these factors, forward curves for commodities are in general more complex than forward curves for financial assets. @fig-forward2 presents forward curves for crude oil, natural gas, and corn at various dates.  April 20, 2020 was the day that crude famously "went negative."  This was at the onset of the coronavirus crisis, when demand had plummeted, and storage facilities at Cushing, Oklahoma (the delivery point for the CME WTI contract) were full.  Some traders were willing to pay others to get out of their obligations to accept delivery in Cushing -- they sold their oil at a negative price!.  To connect to our discussion, note that the extremely large positive slope of the forward curve means that $c-y$ must be extremely large.  This was true because storage costs were extremely high and the convenience yield was zero.
+As a result of these factors, forward curves for commodities are in general more complex than forward curves for financial assets. @fig-forward2 presents forward curves for crude oil, natural gas, and corn at various dates.  April 20, 2020 was the day that crude famously "went negative."  This was at the onset of the coronavirus crisis, when demand had plummeted, and storage facilities at Cushing, Oklahoma (the delivery point for the CME WTI contract) were full.  Some traders were willing to pay others to get out of their obligations to accept delivery in Cushing -- they sold their oil at a negative price.  To connect to our discussion, note that the extremely large positive slope of the forward curve means that $c-y$ must be extremely large.  This was true because storage costs were extremely high and the convenience yield was zero.
 
 The crude oil forward curve was steeply downward sloping in March 2022 following the Russian invasion of Ukraine, as seen in @fig-forward2.  This means that $c-y<0$ and large in absolute value.  We can attribute this to a high convenience yield of being in possession of oil at a time when future supplies were very uncertain.
 
@@ -314,9 +314,9 @@ fig.show()
 
 ## Options on Futures
 
-Many exchanges trade options on futures contracts, creating a derivative on a derivative. A call option on a futures contract is the right to buy the futures contract at the strike.  A put option is the right to sell the futures contract at the strike.  Compared to trading options on the underlying asset, options on futures benefit from the liquidity of the futures market and the leverage present in futures.  Moreover, they allow traders to avoid the issues of physical delivery and storage that are associated with options on the underlying asset.
+Many exchanges trade options on futures contracts, creating a derivative on a derivative. A call option on a futures contract is the right to buy the futures contract at the strike.  A put option is the right to sell the futures contract at the strike.  Compared to trading options on the underlying asset, trading options on futures benefits from the liquidity of the futures market and the leverage present in futures.  Moreover, they allow traders to avoid the issues of physical delivery and storage that are associated with options on the underlying asset.
 
-Exercise of an option of a futures contract creates a long (for a call) or short (for a put) position in the futures contract for the party that exercises.  When an option is exercised, the clearinghouse randomly selects someone who has sold the option and assigns to them the opposite contract: a short (for the seller of a call) or long (for the seller of a put) position in the futures contract.
+Exercise of an option on a futures contract creates a long (for a call) or short (for a put) position in the futures contract for the party that exercises.  When an option is exercised, the clearinghouse randomly selects someone who has sold the option and assigns to them the opposite contract: a short (for the seller of a call) or long (for the seller of a put) position in the futures contract.
 Both parties are immediately marked to market, and there are corresponding cash transfers based on the strike of the futures option and the current market futures price.  
 
 An example should make this clearer.  Suppose a trader buys a call option on corn futures with a strike of $5.00 (per bushel).  The trader later exercises the option when the corn futures price is $5.50.  The trader will be assigned a long futures contract, marked to market at $5.50 and will receive in cash the $0.50 difference between the futures price and the strike price.  The option writer who is selected by the clearinghouse will have $0.50 deducted from her margin account and will be assigned a short futures contract at $5.50.  If they desire to do so, both the party who exercised and the option writer can trade out of their futures contracts at the market price and walk away with the $0.50 gain or loss and no further obligations.  
